fixes java 14 issues